tests/snapshots/example_app_completions__nu__help__basic.snap
---
source: tests/example_app_completions.rs
expression: test!(basic_command)
---
〉help  my-app
Usage:
  > my-app {flags} 

Subcommands:
  my-app help - Print this message or the help of the given subcommand(s)
  my-app test - Subcommand

Flags:
  -h, --help
      Print help information
  -c
      
  -v
      


〉help my-app test
Subcommand

Usage:
  > my-app test {flags} 

Flags:
  -d
      
  -h, --help
      Print help information
  -c
      


〉help my-app help
Print this message or the help of the given subcommand(s)

Usage:
  > my-app help (subcommand) 

Flags:
  -c
      

Parameters:
  (optional) subcommand <String>: The subcommand whose help message to display



