tests/snapshots/example_app_completions__nu__help__quoting.snap
---
source: tests/example_app_completions.rs
expression: test!(quoting_command)
---
〉help  my-app
Usage:
  > my-app {flags} 

Subcommands:
  my-app cmd-backslash - Avoid '\n'
  my-app cmd-backticks - For more information see `echo test`
  my-app cmd-brackets - List packages [filter]
  my-app cmd-double-quotes - Can be "always", "auto", or "never"
  my-app cmd-expansions - Execute the shell command with $SHELL
  my-app cmd-single-quotes - Can be 'always', 'auto', or 'never'
  my-app help - Print this message or the help of the given subcommand(s)

Flags:
  -h, --help
      Print help information
  -V, --version
      Print version information
  --single-quotes
      Can be 'always', 'auto', or 'never'
  --double-quotes
      Can be "always", "auto", or "never"
  --backticks
      For more information see `echo test`
  --backslash
      Avoid '\n'
  --brackets
      List packages [filter]
  --expansions
      Execute the shell command with $SHELL


〉help my-app cmd-single-quotes
Can be 'always', 'auto', or 'never'

Usage:
  > my-app cmd-single-quotes 

Flags:
  -h, --help
      Print help information


〉help my-app cmd-double-quotes
Can be "always", "auto", or "never"

Usage:
  > my-app cmd-double-quotes 

Flags:
  -h, --help
      Print help information


〉help my-app cmd-backticks
For more information see `echo test`

Usage:
  > my-app cmd-backticks 

Flags:
  -h, --help
      Print help information


〉help my-app cmd-backslash
Avoid '\n'

Usage:
  > my-app cmd-backslash 

Flags:
  -h, --help
      Print help information


〉help my-app cmd-brackets
List packages [filter]

Usage:
  > my-app cmd-brackets 

Flags:
  -h, --help
      Print help information


〉help my-app cmd-expansions
Execute the shell command with $SHELL

Usage:
  > my-app cmd-expansions 

Flags:
  -h, --help
      Print help information


〉help my-app help
Print this message or the help of the given subcommand(s)

Usage:
  > my-app help (subcommand) 

Parameters:
  (optional) subcommand <String>: The subcommand whose help message to display



